--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -12,12 +12,3 @@ body {
 .container {
   margin: 2em;
 }
-.page-wrapper {
-  padding: 4em 6em;
-}
-
-@media screen and (max-width: 767px) {
-  .page-wrapper {
-    padding: 4em 0em;
-  }
-}
